--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i%7cWork+Sans:400,500,700"
         rel="stylesheet" type="text/css">
 
-    <link rel="stylesheet" href="assets/css/app.css">
+    <link rel="stylesheet" href="dist/style.css">
 
     <!-- END: Styles -->
     
