connection to sass utils

--- a/home.html
+++ b/home.html
@@ -55,20 +55,20 @@
     </header>
 
     <main>
-        <section class='first-section'>
+        <section class='first'>
             <h2>
                 NEW BRANDING AGENCY
             </h2>
             <h1>
                 We are about to change the way
                 <br>
-                <span class='sub-title'>
-                    you publish on web
-                </span>
+                <div class='first__sub-title'>
+                    <span>publish on web</span> 
+                </div>
             </h1>
 
             <!-- ---WSTAWIC IKONE--- -->
-            <img src="" alt="" class='first-icon-bottom'>
+            <img src="" alt="" class='first__icon'>
         </section>
 
         <section class='second-section'>
