--- a/home.html
+++ b/home.html
@@ -34,14 +34,15 @@
 <body>
 
     <header>
-        <section class='header'>
-            <div class='logo'>
-                <img src="assets/images/logo-light.png" alt="Snow logo">
+
+        <section class='header container'>
+            <div class='header__logo'>
+                <img class="header__logo__img" src="assets/images/logo-light.png" alt="Snow logo">
             </div>
-            <div>
+            <div class="nav-bar">
                 <!-- WSTAWIC IKONE BARS  -->
-                <img src="" alt="">
-                <nav class='bars'>
+                <img class="nav-bar__img" src="" alt="">
+                <nav class='nav-bar__nav'>
                     <ul>
                         <li>Home</li>
                         <li>Portfolio</li>
@@ -55,92 +56,82 @@
     </header>
 
     <main>
-        <section class='first'>
-            <h2>
+        <section class='centered-title container'>
+            <h2 class="centered-title__brand"       >
                 NEW BRANDING AGENCY
             </h2>
-            <h1>
+            <h1 class="centered-title__big--white">
                 We are about to change the way
                 <br>
-                <div class='first__sub-title'>
+                <div class='centered-title__big--italic'>
                     <span>publish on web</span> 
                 </div>
             </h1>
 
             <!-- ---WSTAWIC IKONE--- -->
-            <img src="" alt="" class='first__icon'>
+            <img src="" alt="" class='centered-title__icon'>
         </section>
 
-        <section class='second-section'>
-            <h2>About Our Agency</h2>
+        <section class='centered-title container'>
+            <h2 class='centered-title__big--dark'>About Our Agency</h2>
             <p>We are a new design studio based in SA. We have over 20 years of combined experience, and know a ting or
                 two about designing websites and mobile apps. Clever use of technology and lean processes enable us to
                 work faster and smarter</p>
             <!-- ---WSTAWIC IKONE--- -->
-            <img src="" class=signaure alt="">
+            <img src="" class='centered-title-icon-signatre' alt="">
 
         </section>
 
-        <section class='third-section'>
+        <section class='icon-list container'>
             <!-- ---WSTAWIC IKONE--- -->
-            <div class='icon-box'>
-                <div class='icon'>
-                    <img src="" alt="">
+            <div class='icon-list__box'>
+                <div class='icon-list__icon-div'>
+                    <img class='icon-list__img'  src="" alt="">
                 </div>
-                <div class='icon-desc'>
+                <div class='icon-list__icon-desc'>
                     548<br>
                     PROJECTS COMPLETED
                 </div>
-                <div class='icon-box'>
-                    <div class='icon'>
-                        <img src="" alt="">
-                    </div>
-                    <div class='icon-desc'>
-                        1465<br>
-                        WORKING HOURS
-                    </div>
-                    <div class='icon-box'>
-                        <div class='icon'>
-                            <img src="" alt="">
-                        </div>
-                        <div class='icon-desc'>
-                            612<br>
-                            POSITIVE FEEDBACKS
-                        </div>
-                        <div class='icon-box'>
-                            <div class='icon'>
-                                <img src="" alt="">
-                            </div>
-                            <div class='icon-desc'>
-                                735<br>
-                                HAPPY CLIENTS
-                            </div>
-                        </div>
-
+          <div class='icon-list__box'>
+                <div class='icon-list__icon-div'>
+                    <img class='icon-list__img'  src="" alt="">
+                </div>
+                <div class='icon-list__icon-desc'>
+                    1465<br>
+                    WORKING HOURS
+                </div>
+          <div class='icon-list__box'>
+                <div class='icon-list__icon-div'>
+                    <img class='icon-list__img'  src="" alt="">
+                </div>
+                <div class='icon-list__icon-desc'>
+                    612<br>
+                    POSITIVE FEEDBACK
+                </div>
+          <div class='icon-list__box'>
+                <div class='icon-list__icon-div'>
+                    <img class='icon-list__img'  src="" alt="">
+                </div>
+                <div class='icon-list__icon-desc'>
+                    735<br>
+                    HAPPY CLIENS
+                </div>
         </section>
-        <section class='third-section'>
-            <h2>Best Projects</h2>
+        <section class='centered-title container'>
+            <h2 class="centered-title__big--dark">Best Projects</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque gravida, arcu id dignissim vestibulum,
                 ex quam dictum turpis, quis vulputate est ante a dui. Duis a tempor lectus, ac ultricies mauris. Mauris
                 quis dolor vitae ex viverra aliquet.</p>
             <div class='gallery'>
-                <div>
-                    <div class='height-25'></div>
-                    <div class='height-25'></div>
-                    <div class='height-50'></div>
-                </div>
-                <div>
-                    <div class='height-50'></div>
-                    <div class='height-25' id='vinyl'></div>
-                    <div class='height-25'></div>
-                </div>
-                <div>
-                    <div class='height-25'></div>
-                    <div class='height-50'></div>
-                    <div class='height-25'></div>
-                </div>
+               
+
+                    <!-- GALERIA JQUERY -->
+
+
+
+
             </div>
-        <section class='fourth-section'>
+        <section class='centered-title--desc-slider container'>
             <div class='text-slider-container'>
                 <input type="radio" class="radio" name="blackquotes" id="txt-radio-1">
                 <input type="radio" class="radio" name="blackquotes" id="txt-radio-2">
