starting to write styles of home page

--- a/home.html
+++ b/home.html
@@ -57,20 +57,22 @@
     </header>
 
     <main>
-        <section class='centered-title container'>
-            <h2 class="centered-title__brand"       >
-                NEW BRANDING AGENCY
-            </h2>
-            <h1 class="centered-title__big--white">
-                We are about to change the way
-                <br>
-                <div class='centered-title__big--italic'>
-                    <span>publish on web</span> 
-                </div>
-            </h1>
+        <section class='centered-title'>
+            <div class="container">
+                <h2 class="centered-title__brand"       >
+                    NEW BRANDING AGENCY
+                </h2>
+                <h1 class="centered-title__big--white">
+                    We are about to change the way
+                    <br>
+                    <div class='centered-title__big--italic'>
+                        <span>publish on web</span> 
+                    </div>
+                </h1>
+            </div>
 
-            <!-- ---WSTAWIC IKONE--- -->
-            <img src="" alt="" class='centered-title__icon'>
+                <!-- ---WSTAWIC IKONE--- -->
+                <img src="" alt="" class='centered-title__icon'>
         </section>
 
         <section class='centered-title container'>
@@ -355,10 +357,44 @@
                     
                 </div>
                 <div class="col-4">
+                    <div class="links__insta">
+                        <div class="links__insta__img">
+                            <img src="assets/images/insta1.png" alt="">
+                        </div>
+                        <div class="links__insta__img">
+                            <img src="assets/images/insta2.png" alt="">
+                        </div>
+                        <div class="links__insta__img">
+                            <img src="assets/images/insta3.jpeg" alt="">
+                        </div>
+                        <div class="links__insta__img">
+                            <img src="assets/images/insta4.jpeg" alt="">
+                        </div>
+                        <div class="links__insta__img">
+                            <img src="assets/images/insta5.jpeg" alt="">
+                        </div>
+                        <div class="links__insta__img">
+                            <img src="assets/images/insta6.png" alt="">
+                        </div>
+                        <div class="links__insta__img">
+                            <img src="assets/images/insta7.jpeg" alt="">
+                        </div>
+                        <div class="links__insta__img">
+                            <img src="assets/images/insta8.png" alt="">
+                        </div>
+                    </div>
                     
                 </div>
 
 
+            </div>
+
+
+
+        </section>
+        <section class="container author">
+            <div class="autor__text">
+                <p>@2022. Created by Oskar Kawka</p>
             </div>
 
         </section>
