styling first section

--- a/home.html
+++ b/home.html
@@ -57,16 +57,16 @@
     </header>
 
     <main>
-        <section class='centered-title'>
+        <section class='new-branding'>
             <div class="container">
-                <h2 class="centered-title__brand"       >
+                <h2 class="new-branding__caps"       >
                     NEW BRANDING AGENCY
                 </h2>
-                <h1 class="centered-title__big--white">
+                <h1 class="new-branding__big--white">
                     We are about to change the way
                     <br>
-                    <div class='centered-title__big--italic'>
-                        <span>publish on web</span> 
+                    <div class='new-branding__big--italic'>
+                        <span>you publish on web</span> 
                     </div>
                 </h1>
             </div>
@@ -75,13 +75,13 @@
                 <img src="" alt="" class='centered-title__icon'>
         </section>
 
-        <section class='centered-title container'>
-            <h2 class='centered-title__big--dark'>About Our Agency</h2>
+        <section class='about container'>
+            <h2 class='about__big--dark'>About Our Agency</h2>
             <p>We are a new design studio based in SA. We have over 20 years of combined experience, and know a ting or
                 two about designing websites and mobile apps. Clever use of technology and lean processes enable us to
                 work faster and smarter</p>
             <!-- ---WSTAWIC IKONE--- -->
-            <img src="" class='centered-title-icon-signatre' alt="">
+            <img src="" class='about__icon-signatre' alt="">
 
         </section>
 
