js for nav bar and bootstrap configuration

--- a/home.html
+++ b/home.html
@@ -86,41 +86,43 @@
 
         <section class='icon-list'>
             <div class='container'>
-                <div class='icon-list__box col-3'>
+                <div class="row row-no-gutters">
+                    <div class='icon-list__box col-sm-3'>
+                        <div class='icon-list__icon-div'>
+                            <i class="fa-solid fa-suitcase"></i>
+                        </div>
+                        <div class='icon-list__icon-desc'>
+                            548<br>
+                            PROJECTS COMPLETED
+                        </div>
+                </div>
+                <div class='icon-list__box col-sm-3'>
                     <div class='icon-list__icon-div'>
-                        <i class="fa-solid fa-suitcase"></i>
+                        <i class="fa-regular fa-clock"></i>
                     </div>
                     <div class='icon-list__icon-desc'>
-                        548<br>
-                        PROJECTS COMPLETED
+                        1465<br>
+                        WORKING HOURS
                     </div>
-             </div>
-               <div class='icon-list__box col-3'>
-                 <div class='icon-list__icon-div'>
-                       <i class="fa-regular fa-clock"></i>
-                  </div>
-                   <div class='icon-list__icon-desc'>
-                     1465<br>
-                     WORKING HOURS
-                  </div>
-             </div>
-              <div class='icon-list__box col-3'>
-                 <div class='icon-list__icon-div'>
-                       <i class="fa-regular fa-star"></i>
+                </div>
+                <div class='icon-list__box col-sm-3'>
+                    <div class='icon-list__icon-div'>
+                        <i class="fa-regular fa-star"></i>
+                        </div>
+                    <div class='icon-list__icon-desc'>
+                            612<br>
+                        POSITIVE FEEDBACK
                     </div>
-                 <div class='icon-list__icon-desc'>
-                        612<br>
-                       POSITIVE FEEDBACK
-                  </div>
-             </div>
-             <div class='icon-list__box col-3'>
-                   <div class='icon-list__icon-div'>
-                       <i class="fa-regular fa-heart"></i>
+                </div>
+                <div class='icon-list__box col-sm-3'>
+                    <div class='icon-list__icon-div'>
+                        <i class="fa-regular fa-heart"></i>
+                        </div>
+                    <div class='icon-list__icon-desc'>
+                            735<br>
+                            HAPPY CLIENTS
                     </div>
-                 <div class='icon-list__icon-desc'>
-                        735<br>
-                        HAPPY CLIENTS
-                 </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -374,6 +376,7 @@
     <!-- START: Scripts -->
 
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/slider.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
     
     
