--- a/home.html
+++ b/home.html
@@ -215,7 +215,7 @@
         <section class="contact" id="contact">
             <div class="container">
                 <div class="row">
-                    <div class="contact-info col-6">
+                    <div class="contact-info col-sm-6">
                         <h4 class="contact-info__title">
                             Contact Info:
                         </h4>
@@ -244,7 +244,7 @@
                         </a>
                     
                     </div>
-                    <div class="form col-6">
+                    <div class="form col-sm-6">
                         <form action="/my-handling-form-page" method="post">
                             <ul>
                                 <li class="form__name">
@@ -278,7 +278,7 @@
         <section class="links">
             <div class="container">
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-sm-4">
                         <h5 class="links__title">
                             About Us
                         </h5>
@@ -297,7 +297,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-sm-4">
                         <h5 class="links__title">
                             Latest Twits
                         </h5>
@@ -328,7 +328,7 @@
                             </div>     
                         </div>
                     </div>    
-                    <div class="col-4">
+                    <div class="col-sm-4">
                         <h5 class="links__title">
                             Instagram
                         </h5>
