--- a/index.html
+++ b/index.html
@@ -36,8 +36,6 @@
 </head>
 
 <body>
-    <! -- o.kawka container --> 
-      <! --
 <script type="text/javascript">
   (function(window, document, dataLayerName, id) {
 window[dataLayerName]=window[dataLayerName]||[],window[dataLayerName].push({start:(new Date).getTime(),event:"stg.start"});var scripts=document.getElementsByTagName('script')[0],tags=document.createElement('script');
@@ -46,9 +44,10 @@ var isStgDebug=(window.location.href.match("stg_debug")||document.cookie.match("
 var qP=[];dataLayerName!=="dataLayer"&&qP.push("data_layer_name="+dataLayerName),isStgDebug&&qP.push("stg_debug");var qPString=qP.length>0?("?"+qP.join("&")):"";
 tags.async=!0,tags.src="https://internal-sandbox.containers.piwik.pro/"+id+".js"+qPString,scripts.parentNode.insertBefore(tags,scripts);
 !function(a,n,i){a[n]=a[n]||{};for(var c=0;c<i.length;c++)!function(i){a[n][i]=a[n][i]||{},a[n][i].api=a[n][i].api||function(){var a=[].slice.call(arguments,0);"string"==typeof a[0]&&window[dataLayerName].push({event:n+"."+i+":"+a[0],parameters:[].slice.call(arguments,1)})}}(i[c])}(window,"ppms",["tm","cm"]);
-})(window, document, 'dataLayer', 'ecc19cc9-9080-4e98-a4fc-d7c4f7420e7e');  --> 
+})(window, document, 'dataLayer', 'ecc19cc9-9080-4e98-a4fc-d7c4f7420e7e');  
          <! -- https://www.nv.at/ container --> 
-    <script type="text/javascript">
+ <!--
+<script type="text/javascript">
 window.PiwikPROappID = "8d7580eb-b236-4870-96f2-11e24ce2996f";
 (function(window, document, dataLayerName, id) {
 window[dataLayerName]=window[dataLayerName]||[],window[dataLayerName].push({start:(new Date).getTime(),event:"stg.start"});var scripts=document.getElementsByTagName('script')[0],tags=document.createElement('script');
@@ -59,6 +58,8 @@ tags.async=!0,tags.src="https://nv-ag.containers.piwik.pro/"+id+".js"+qPString,s
 !function(a,n,i){a[n]=a[n]||{};for(var c=0;c<i.length;c++)!function(i){a[n][i]=a[n][i]||{},a[n][i].api=a[n][i].api||function(){var a=[].slice.call(arguments,0);"string"==typeof a[0]&&window[dataLayerName].push({event:n+"."+i+":"+a[0],parameters:[].slice.call(arguments,1)})}}(i[c])}(window,"ppms",["tm","cm"]);
 })(window, document, 'dataLayer', window.PiwikPROappID);
 </script>
+-->
+
 
         
 
