--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
 </head>
 
 <body>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    window.dataLayer.push({
+        'userID': 'ABC123'
+    });
+</script>
+
+    
 <script type="text/javascript">
   (function(window, document, dataLayerName, id) {
 window[dataLayerName]=window[dataLayerName]||[],window[dataLayerName].push({start:(new Date).getTime(),event:"stg.start"});var scripts=document.getElementsByTagName('script')[0],tags=document.createElement('script');
